--- a/coordinates.html
+++ b/coordinates.html
@@ -2,91 +2,168 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>محول إحداثيات ذكي</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>محول الإحداثيات الذكي - نسخة متطورة</title>
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <style>
-    body { font-family: 'Tajawal', sans-serif; background: #f9f9f9; padding: 30px; text-align: center; }
-    .upload-btn { background: #4285f4; color: #fff; padding: 12px 24px; border: none; border-radius: 8px; cursor: pointer; font-size: 16px; }
-    .progress-bar-container { background: #ddd; height: 20px; border-radius: 10px; margin: 20px 0; overflow: hidden; }
-    .progress-bar { height: 100%; width: 0%; background: #34a853; transition: width 0.4s ease; }
-    .results { display: flex; flex-direction: column; gap: 20px; margin-top: 30px; }
-    .card { background: #fff; border-radius: 12px; padding: 20px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); text-align: right; }
-    iframe { width: 100%; height: 250px; border: none; border-radius: 8px; margin-top: 10px; }
+    body {
+      font-family: 'Tajawal', sans-serif;
+      background: #f0f2f5;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+      direction: rtl;
+    }
+    .card {
+      background: white;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      max-width: 900px;
+      margin: auto;
+    }
+    input[type="file"] {
+      display: none;
+    }
+    label {
+      background: #4285F4;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      display: inline-block;
+    }
+    #progress {
+      width: 100%;
+      height: 20px;
+      margin-top: 15px;
+      border-radius: 10px;
+      background: #eee;
+      overflow: hidden;
+    }
+    #progress-bar {
+      height: 100%;
+      width: 0;
+      background: #34A853;
+      transition: width 0.4s ease;
+    }
+    .results {
+      margin-top: 30px;
+    }
+    .result {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 15px;
+      margin-bottom: 20px;
+      text-align: right;
+    }
+    iframe {
+      width: 100%;
+      height: 250px;
+      border: none;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+    .btn-map {
+      margin-top: 10px;
+      background: #FBBC05;
+      border: none;
+      color: black;
+      padding: 8px 20px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
+  <div class="card">
+    <h1>🚀 محول الإحداثيات الذكي</h1>
+    <p>يرجى اختيار ملف Excel يحتوي على عمود الإحداثيات مثل <b>N 3121258 E 2713105</b></p>
 
-  <h1>🔍 محول إحداثيات ذكي</h1>
-  <input type="file" id="fileInput" accept=".xlsx, .xls" class="upload-btn">
-  <div class="progress-bar-container"><div class="progress-bar" id="progressBar"></div></div>
-  <div class="results" id="results"></div>
+    <input type="file" id="fileInput" accept=".xlsx, .xls">
+    <label for="fileInput">📁 اختر ملف Excel</label>
+
+    <div id="progress" style="display:none;"><div id="progress-bar"></div></div>
+
+    <div class="results" id="results"></div>
+  </div>
 
   <script>
     document.getElementById("fileInput").addEventListener("change", async function(e) {
       const file = e.target.files[0];
       if (!file) return;
 
-      const progressBar = document.getElementById("progressBar");
-      progressBar.style.width = "0%";
-
-      const arrayBuffer = await file.arrayBuffer();
-      const workbook = XLSX.read(arrayBuffer, { type: "array" });
+      const data = await file.arrayBuffer();
+      const workbook = XLSX.read(data, { type: 'array' });
       const sheet = workbook.Sheets[workbook.SheetNames[0]];
-      const data = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+      const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
 
-      const headerRow = data[0];
-      const coordColIndex = headerRow.findIndex(col => typeof col === 'string' && col.includes("'N'||LATITUDE||'E'||LONGITUDE"));
-      if (coordColIndex === -1) {
-        alert("لم يتم العثور على عمود إحداثيات بصيغة 'N'||LAT||'E'||LON");
+      const headers = rows[0];
+      const resultsContainer = document.getElementById("results");
+      resultsContainer.innerHTML = "";
+
+      let coordIndex = -1;
+      for (let i = 0; i < headers.length; i++) {
+        for (let j = 1; j < rows.length; j++) {
+          const val = rows[j][i];
+          if (typeof val === 'string' && val.match(/N\s?\d+\s?E\s?\d+/)) {
+            coordIndex = i;
+            break;
+          }
+        }
+        if (coordIndex !== -1) break;
+      }
+
+      if (coordIndex === -1) {
+        resultsContainer.innerHTML = "<p style='color:red'>❌ لم يتم العثور على عمود يحتوي على إحداثيات بصيغة N ... E ...</p>";
         return;
       }
 
-      const resultsDiv = document.getElementById("results");
-      resultsDiv.innerHTML = "";
-      const totalRows = data.length - 1;
+      document.getElementById("progress").style.display = "block";
+      const progressBar = document.getElementById("progress-bar");
 
-      for (let i = 1; i < data.length; i++) {
-        const row = data[i];
-        const cell = row[coordColIndex];
-        if (!cell) continue;
+      for (let i = 1; i < rows.length; i++) {
+        const row = rows[i];
+        const coord = row[coordIndex];
+        if (!coord) continue;
 
-        const parsed = parseSmartCoordinates(cell);
-        if (!parsed) continue;
+        const match = coord.match(/N\s?(\d+)\s?E\s?(\d+)/);
+        if (!match) continue;
 
-        const card = document.createElement("div");
-        card.className = "card";
-        card.innerHTML = `
-          <p><strong>📍 الإحداثيات الأصلية:</strong> ${cell}</p>
-          <p><strong>📌 الإحداثيات المحولة:</strong> ${parsed.lat.toFixed(6)}°, ${parsed.lon.toFixed(6)}°</p>
-          <a href="https://maps.google.com?q=${parsed.lat},${parsed.lon}" target="_blank" style="color: #1a73e8;">فتح في خرائط جوجل</a>
-          <iframe src="https://maps.google.com/maps?q=${parsed.lat},${parsed.lon}&z=16&output=embed" loading="lazy"></iframe>
+        const latDMS = match[1];
+        const lonDMS = match[2];
+
+        const latDecimal = convertDMS(latDMS);
+        const lonDecimal = convertDMS(lonDMS);
+
+        const mapUrl = `https://maps.google.com/maps?q=${latDecimal},${lonDecimal}&z=16&output=embed`;
+
+        const div = document.createElement("div");
+        div.className = "result";
+        div.innerHTML = `
+          <p><strong>الإحداثيات الأصلية:</strong> ${coord}</p>
+          <p><strong>الإحداثيات المحوّلة:</strong> ${latDecimal.toFixed(7)}, ${lonDecimal.toFixed(7)}</p>
+          <iframe src="${mapUrl}" loading="lazy"></iframe>
+          <button class="btn-map" onclick="window.open('https://maps.google.com/maps?q=${latDecimal},${lonDecimal}&z=16', '_blank')">افتح في خرائط جوجل</button>
         `;
-        resultsDiv.appendChild(card);
+        resultsContainer.appendChild(div);
 
-        progressBar.style.width = `${((i / totalRows) * 100).toFixed(0)}%`;
+        progressBar.style.width = ((i / rows.length) * 100) + "%";
       }
 
       progressBar.style.width = "100%";
     });
 
-    function parseSmartCoordinates(text) {
-      const match = text.match(/N\s*(\d+)\s+E\s*(\d+)/i);
-      if (!match) return null;
-      const lat = convertDMS(match[1], true);
-      const lon = convertDMS(match[2], false);
-      return { lat, lon };
-    }
-
-    function convertDMS(dms, isLat) {
-      const padded = dms.toString().padStart(7, '0');
-      const degDigits = isLat ? 2 : 3;
-      const deg = parseInt(padded.slice(0, degDigits));
-      const min = parseInt(padded.slice(degDigits, degDigits + 2));
-      const sec = parseInt(padded.slice(degDigits + 2, degDigits + 2 + 2));
+    function convertDMS(dmsStr) {
+      const padded = dmsStr.toString().padStart(7, '0');
+      const deg = parseInt(padded.slice(0, 2));
+      const min = parseInt(padded.slice(2, 4));
+      const sec = parseInt(padded.slice(4, 6));
       return deg + (min / 60) + (sec / 3600);
     }
   </script>
-
 </body>
 </html>
