--- a/coordinates.html
+++ b/coordinates.html
@@ -1,169 +1,120 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>محول الإحداثيات الذكي - نسخة متطورة</title>
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <style>
-    body {
-      font-family: 'Tajawal', sans-serif;
-      background: #f0f2f5;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-      direction: rtl;
-    }
-    .card {
-      background: white;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      max-width: 900px;
-      margin: auto;
-    }
-    input[type="file"] {
-      display: none;
-    }
-    label {
-      background: #4285F4;
-      color: white;
-      padding: 12px 25px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: bold;
-      display: inline-block;
-    }
-    #progress {
-      width: 100%;
-      height: 20px;
-      margin-top: 15px;
-      border-radius: 10px;
-      background: #eee;
-      overflow: hidden;
-    }
-    #progress-bar {
-      height: 100%;
-      width: 0;
-      background: #34A853;
-      transition: width 0.4s ease;
-    }
-    .results {
-      margin-top: 30px;
-    }
-    .result {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 15px;
-      margin-bottom: 20px;
-      text-align: right;
-    }
-    iframe {
-      width: 100%;
-      height: 250px;
-      border: none;
-      border-radius: 10px;
-      margin-top: 10px;
-    }
-    .btn-map {
-      margin-top: 10px;
-      background: #FBBC05;
-      border: none;
-      color: black;
-      padding: 8px 20px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>محول الإحداثيات الذكي</title>
+    <style>
+        body { font-family: 'Tajawal', sans-serif; background: #f0f2f5; padding: 20px; }
+        h1 { text-align: center; color: #333; margin-bottom: 20px; }
+        .card { background: white; border-radius: 12px; padding: 20px; box-shadow: 0 0 10px #ccc; max-width: 900px; margin: auto; }
+        .file-label { display: inline-block; padding: 10px 20px; background: #4285f4; color: white; border-radius: 6px; cursor: pointer; font-weight: bold; }
+        .process-btn { padding: 10px 20px; margin-top: 15px; background: #34a853; color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; }
+        .result { margin-top: 20px; border-top: 1px solid #ddd; padding-top: 20px; }
+        .map { height: 300px; width: 100%; border-radius: 8px; margin-top: 10px; }
+        .progress-bar { width: 100%; background: #eee; border-radius: 20px; overflow: hidden; margin-top: 15px; }
+        .progress { height: 16px; width: 0; background: #4285f4; transition: 0.3s; }
+    </style>
 </head>
 <body>
-  <div class="card">
-    <h1>🚀 محول الإحداثيات الذكي</h1>
-    <p>يرجى اختيار ملف Excel يحتوي على عمود الإحداثيات مثل <b>N 3121258 E 2713105</b></p>
 
-    <input type="file" id="fileInput" accept=".xlsx, .xls">
-    <label for="fileInput">📁 اختر ملف Excel</label>
+    <h1>🔎 محول الإحداثيات الذكي</h1>
+    <div class="card">
+        <label for="excelFile" class="file-label">📁 اختر ملف Excel</label>
+        <input type="file" id="excelFile" accept=".xlsx, .xls" style="display:none;" />
+        <button class="process-btn" onclick="processFile()">🚀 بدء التحويل</button>
+        <div class="progress-bar"><div id="progress" class="progress"></div></div>
+        <div id="results"></div>
+    </div>
 
-    <div id="progress" style="display:none;"><div id="progress-bar"></div></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script>
+        function processFile() {
+            const file = document.getElementById('excelFile').files[0];
+            if (!file) return alert("يرجى اختيار ملف Excel");
 
-    <div class="results" id="results"></div>
-  </div>
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                const data = new Uint8Array(e.target.result);
+                const workbook = XLSX.read(data, { type: 'array' });
+                const sheet = workbook.Sheets[workbook.SheetNames[0]];
+                const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
 
-  <script>
-    document.getElementById("fileInput").addEventListener("change", async function(e) {
-      const file = e.target.files[0];
-      if (!file) return;
+                let results = [];
+                let totalRows = rows.length - 1;
+                let processed = 0;
 
-      const data = await file.arrayBuffer();
-      const workbook = XLSX.read(data, { type: 'array' });
-      const sheet = workbook.Sheets[workbook.SheetNames[0]];
-      const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+                rows.forEach((row, i) => {
+                    if (i === 0) return; // skip header
+                    row.forEach(cell => {
+                        if (typeof cell === 'string' && cell.includes('N') && cell.includes('E')) {
+                            const parsed = parseCoordinates(cell);
+                            if (parsed) {
+                                results.push({ original: cell, ...parsed });
+                            }
+                        }
+                    });
+                    processed++;
+                    updateProgress(processed / totalRows * 100);
+                });
 
-      const headers = rows[0];
-      const resultsContainer = document.getElementById("results");
-      resultsContainer.innerHTML = "";
-
-      let coordIndex = -1;
-      for (let i = 0; i < headers.length; i++) {
-        for (let j = 1; j < rows.length; j++) {
-          const val = rows[j][i];
-          if (typeof val === 'string' && val.match(/N\s?\d+\s?E\s?\d+/)) {
-            coordIndex = i;
-            break;
-          }
+                displayResults(results);
+            };
+            reader.readAsArrayBuffer(file);
         }
-        if (coordIndex !== -1) break;
-      }
 
-      if (coordIndex === -1) {
-        resultsContainer.innerHTML = "<p style='color:red'>❌ لم يتم العثور على عمود يحتوي على إحداثيات بصيغة N ... E ...</p>";
-        return;
-      }
+        function updateProgress(percent) {
+            document.getElementById('progress').style.width = `${percent}%`;
+        }
 
-      document.getElementById("progress").style.display = "block";
-      const progressBar = document.getElementById("progress-bar");
+        function parseCoordinates(text) {
+            const regex = /N\s*(\d{7})\s*E\s*(\d{7})/i;
+            const match = text.match(regex);
+            if (!match) return null;
 
-      for (let i = 1; i < rows.length; i++) {
-        const row = rows[i];
-        const coord = row[coordIndex];
-        if (!coord) continue;
+            const lat = dmsToDecimal(match[1], true);
+            const lon = dmsToDecimal(match[2], false);
 
-        const match = coord.match(/N\s?(\d+)\s?E\s?(\d+)/);
-        if (!match) continue;
+            return {
+                latitude: lat.toFixed(7),
+                longitude: lon.toFixed(7),
+                mapLink: `https://www.google.com/maps?q=${lat},${lon}`,
+                embed: `https://maps.google.com/maps?q=${lat},${lon}&z=16&output=embed`
+            };
+        }
 
-        const latDMS = match[1];
-        const lonDMS = match[2];
+        function dmsToDecimal(dms, isLat) {
+            const padded = dms.padStart(7, '0');
+            const deg = parseInt(padded.slice(0, isLat ? 2 : 3));
+            const min = parseInt(padded.slice(isLat ? 2 : 3, isLat ? 4 : 5));
+            const sec = parseInt(padded.slice(isLat ? 4 : 5, isLat ? 6 : 7));
+            return deg + min / 60 + sec / 3600;
+        }
 
-        const latDecimal = convertDMS(latDMS);
-        const lonDecimal = convertDMS(lonDMS);
+        function displayResults(data) {
+            const container = document.getElementById('results');
+            container.innerHTML = '';
 
-        const mapUrl = `https://maps.google.com/maps?q=${latDecimal},${lonDecimal}&z=16&output=embed`;
+            if (data.length === 0) {
+                container.innerHTML = "<p style='color:red;'>⚠️ لم يتم العثور على إحداثيات صالحة.</p>";
+                return;
+            }
 
-        const div = document.createElement("div");
-        div.className = "result";
-        div.innerHTML = `
-          <p><strong>الإحداثيات الأصلية:</strong> ${coord}</p>
-          <p><strong>الإحداثيات المحوّلة:</strong> ${latDecimal.toFixed(7)}, ${lonDecimal.toFixed(7)}</p>
-          <iframe src="${mapUrl}" loading="lazy"></iframe>
-          <button class="btn-map" onclick="window.open('https://maps.google.com/maps?q=${latDecimal},${lonDecimal}&z=16', '_blank')">افتح في خرائط جوجل</button>
-        `;
-        resultsContainer.appendChild(div);
+            data.forEach((item, index) => {
+                const div = document.createElement('div');
+                div.className = 'result';
+                div.innerHTML = `
+                    <h3>📍 الموقع ${index + 1}</h3>
+                    <p><strong>الإحداثيات الأصلية:</strong> ${item.original}</p>
+                    <p><strong>الموقع المحول:</strong> ${item.latitude}° N, ${item.longitude}° E</p>
+                    <iframe class="map" src="${item.embed}" loading="lazy"></iframe>
+                    <p><a href="${item.mapLink}" target="_blank">🌍 فتح في خرائط جوجل</a></p>
+                    <button onclick="navigator.clipboard.writeText('${item.latitude},${item.longitude}')">📋 نسخ الإحداثيات</button>
+                `;
+                container.appendChild(div);
+            });
+        }
+    </script>
 
-        progressBar.style.width = ((i / rows.length) * 100) + "%";
-      }
-
-      progressBar.style.width = "100%";
-    });
-
-    function convertDMS(dmsStr) {
-      const padded = dmsStr.toString().padStart(7, '0');
-      const deg = parseInt(padded.slice(0, 2));
-      const min = parseInt(padded.slice(2, 4));
-      const sec = parseInt(padded.slice(4, 6));
-      return deg + (min / 60) + (sec / 3600);
-    }
-  </script>
 </body>
 </html>
