--- a/coordinates.html
+++ b/coordinates.html
@@ -1,120 +1,166 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>محول الإحداثيات الذكي</title>
-    <style>
-        body { font-family: 'Tajawal', sans-serif; background: #f0f2f5; padding: 20px; }
-        h1 { text-align: center; color: #333; margin-bottom: 20px; }
-        .card { background: white; border-radius: 12px; padding: 20px; box-shadow: 0 0 10px #ccc; max-width: 900px; margin: auto; }
-        .file-label { display: inline-block; padding: 10px 20px; background: #4285f4; color: white; border-radius: 6px; cursor: pointer; font-weight: bold; }
-        .process-btn { padding: 10px 20px; margin-top: 15px; background: #34a853; color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; }
-        .result { margin-top: 20px; border-top: 1px solid #ddd; padding-top: 20px; }
-        .map { height: 300px; width: 100%; border-radius: 8px; margin-top: 10px; }
-        .progress-bar { width: 100%; background: #eee; border-radius: 20px; overflow: hidden; margin-top: 15px; }
-        .progress { height: 16px; width: 0; background: #4285f4; transition: 0.3s; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>محول الإحداثيات الذكي</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <style>
+    body {
+      font-family: 'Tajawal', sans-serif;
+      background: #f8f9fa;
+      padding: 30px;
+      direction: rtl;
+      text-align: center;
+    }
+    .upload-section {
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    .file-label {
+      background: #4285f4;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      display: inline-block;
+      margin-top: 15px;
+    }
+    #progressBar {
+      width: 100%;
+      background: #e0e0e0;
+      border-radius: 6px;
+      height: 20px;
+      margin: 20px 0;
+      overflow: hidden;
+      display: none;
+    }
+    #progressBarFill {
+      background: #34a853;
+      height: 100%;
+      width: 0%;
+      transition: width 0.3s ease-in-out;
+    }
+    .results {
+      text-align: right;
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .map {
+      margin: 10px 0;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
 
-    <h1>🔎 محول الإحداثيات الذكي</h1>
-    <div class="card">
-        <label for="excelFile" class="file-label">📁 اختر ملف Excel</label>
-        <input type="file" id="excelFile" accept=".xlsx, .xls" style="display:none;" />
-        <button class="process-btn" onclick="processFile()">🚀 بدء التحويل</button>
-        <div class="progress-bar"><div id="progress" class="progress"></div></div>
-        <div id="results"></div>
+  <div class="upload-section">
+    <h2>🔍 محول الإحداثيات الذكي</h2>
+    <p>ارفع ملف Excel يحتوي على الإحداثيات بصيغة "N 3121258 E 2713105"</p>
+    <input type="file" id="excelFile" accept=".xlsx,.xls" style="display:none" />
+    <label for="excelFile" class="file-label">📂 اختر ملف Excel</label>
+    <div id="progressBar">
+      <div id="progressBarFill"></div>
     </div>
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script>
-        function processFile() {
-            const file = document.getElementById('excelFile').files[0];
-            if (!file) return alert("يرجى اختيار ملف Excel");
+  <div class="results" id="results"></div>
 
-            const reader = new FileReader();
-            reader.onload = function (e) {
-                const data = new Uint8Array(e.target.result);
-                const workbook = XLSX.read(data, { type: 'array' });
-                const sheet = workbook.Sheets[workbook.SheetNames[0]];
-                const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+  <script>
+    const fileInput = document.getElementById("excelFile");
+    const resultsDiv = document.getElementById("results");
+    const progressBar = document.getElementById("progressBar");
+    const progressFill = document.getElementById("progressBarFill");
 
-                let results = [];
-                let totalRows = rows.length - 1;
-                let processed = 0;
+    fileInput.addEventListener("change", async function () {
+      const file = this.files[0];
+      if (!file) return;
 
-                rows.forEach((row, i) => {
-                    if (i === 0) return; // skip header
-                    row.forEach(cell => {
-                        if (typeof cell === 'string' && cell.includes('N') && cell.includes('E')) {
-                            const parsed = parseCoordinates(cell);
-                            if (parsed) {
-                                results.push({ original: cell, ...parsed });
-                            }
-                        }
-                    });
-                    processed++;
-                    updateProgress(processed / totalRows * 100);
-                });
+      resultsDiv.innerHTML = "";
+      progressBar.style.display = "block";
+      progressFill.style.width = "0%";
 
-                displayResults(results);
-            };
-            reader.readAsArrayBuffer(file);
-        }
+      const data = await file.arrayBuffer();
+      const workbook = XLSX.read(data, { type: "array" });
+      const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
+      const rows = XLSX.utils.sheet_to_json(firstSheet, { header: 1 });
 
-        function updateProgress(percent) {
-            document.getElementById('progress').style.width = `${percent}%`;
-        }
+      let results = [];
+      const total = rows.length;
 
-        function parseCoordinates(text) {
-            const regex = /N\s*(\d{7})\s*E\s*(\d{7})/i;
-            const match = text.match(regex);
-            if (!match) return null;
+      for (let i = 1; i < rows.length; i++) {
+        for (let cell of rows[i]) {
+          if (typeof cell === "string" && cell.includes("N") && cell.includes("E")) {
+            const coords = extractCoordinates(cell);
+            if (coords) {
+              const { lat, lon } = coords;
+              const decimalLat = convertDMS(lat, true);
+              const decimalLon = convertDMS(lon, false);
 
-            const lat = dmsToDecimal(match[1], true);
-            const lon = dmsToDecimal(match[2], false);
-
-            return {
-                latitude: lat.toFixed(7),
-                longitude: lon.toFixed(7),
-                mapLink: `https://www.google.com/maps?q=${lat},${lon}`,
-                embed: `https://maps.google.com/maps?q=${lat},${lon}&z=16&output=embed`
-            };
-        }
-
-        function dmsToDecimal(dms, isLat) {
-            const padded = dms.padStart(7, '0');
-            const deg = parseInt(padded.slice(0, isLat ? 2 : 3));
-            const min = parseInt(padded.slice(isLat ? 2 : 3, isLat ? 4 : 5));
-            const sec = parseInt(padded.slice(isLat ? 4 : 5, isLat ? 6 : 7));
-            return deg + min / 60 + sec / 3600;
-        }
-
-        function displayResults(data) {
-            const container = document.getElementById('results');
-            container.innerHTML = '';
-
-            if (data.length === 0) {
-                container.innerHTML = "<p style='color:red;'>⚠️ لم يتم العثور على إحداثيات صالحة.</p>";
-                return;
+              results.push({
+                original: cell,
+                lat: decimalLat.toFixed(7),
+                lon: decimalLon.toFixed(7),
+                mapLink: `https://www.google.com/maps?q=${decimalLat},${decimalLon}`,
+                embed: `https://maps.google.com/maps?q=${decimalLat},${decimalLon}&z=16&output=embed`
+              });
             }
-
-            data.forEach((item, index) => {
-                const div = document.createElement('div');
-                div.className = 'result';
-                div.innerHTML = `
-                    <h3>📍 الموقع ${index + 1}</h3>
-                    <p><strong>الإحداثيات الأصلية:</strong> ${item.original}</p>
-                    <p><strong>الموقع المحول:</strong> ${item.latitude}° N, ${item.longitude}° E</p>
-                    <iframe class="map" src="${item.embed}" loading="lazy"></iframe>
-                    <p><a href="${item.mapLink}" target="_blank">🌍 فتح في خرائط جوجل</a></p>
-                    <button onclick="navigator.clipboard.writeText('${item.latitude},${item.longitude}')">📋 نسخ الإحداثيات</button>
-                `;
-                container.appendChild(div);
-            });
+          }
         }
-    </script>
+        progressFill.style.width = `${(i / total) * 100}%`;
+      }
+
+      showResults(results);
+    });
+
+    function extractCoordinates(text) {
+      const pattern = /N\s*(\d{7,})\s*E\s*(\d{7,})/i;
+      const match = text.match(pattern);
+      if (match) {
+        return { lat: match[1], lon: match[2] };
+      }
+      return null;
+    }
+
+    function convertDMS(dms, isLat) {
+      const padded = dms.padStart(isLat ? 7 : 7, '0');
+      const degLength = isLat ? 2 : 3;
+      const deg = parseInt(padded.slice(0, degLength));
+      const min = parseInt(padded.slice(degLength, degLength + 2));
+      const sec = parseInt(padded.slice(degLength + 2, degLength + 4));
+      return deg + min / 60 + sec / 3600;
+    }
+
+    function showResults(results) {
+      progressBar.style.display = "none";
+      if (!results.length) {
+        resultsDiv.innerHTML = "<p>لم يتم العثور على إحداثيات صالحة.</p>";
+        return;
+      }
+
+      results.forEach((r, i) => {
+        const block = document.createElement("div");
+        block.innerHTML = `
+          <h4>📍 الموقع ${i + 1}</h4>
+          <p><strong>الإحداثيات الأصلية:</strong> ${r.original}</p>
+          <p><strong>Decimal:</strong> ${r.lat}, ${r.lon}</p>
+          <div class="map">
+            <iframe width="100%" height="250" frameborder="0" src="${r.embed}" allowfullscreen></iframe>
+          </div>
+          <a href="${r.mapLink}" target="_blank">فتح في خرائط Google</a>
+          <hr/>
+        `;
+        resultsDiv.appendChild(block);
+      });
+    }
+  </script>
 
 </body>
 </html>
